--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,23 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+ 
     android:background="#F5F7FC"
     tools:context=".Main" >
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
     </ListView>
 
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
-        android:layout_width="match_parent"
+        android:padding="0dp"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="0dp"
+   		android:paddingRight="0dp"
         android:visibility="invisible"
         android:background="@drawable/panel_light" >
 
@@ -28,12 +30,12 @@
             android:id="@+id/songLabel"
             android:singleLine="true"
             android:textSize="21dp"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="32dp"
             android:text="SongTitle"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
