--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -15,5 +15,6 @@
         android:singleLine="true"
         android:textSize="16dp"
         android:padding="10dp"
+        android:textColor="#000000"
         android:color="#f3f3f3"/>
 </LinearLayout>
