--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -15,6 +15,13 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+   
     </style>
+    
+    
+     <style name="Orange" parent="android:Widget.EditText">
+	  <item name="android:background">@drawable/songstone_edit_text_holo_light</item>
+	  <item name="android:textColor">#000000</item>
+  	</style>
 
 </resources>
