--- a/res/layout/dialog.xml
+++ b/res/layout/dialog.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <EditText
-        style="@style/Orange"
+        style="@style/StoneEdit"
         android:id="@+id/artist"
         android:inputType="text"
         android:layout_width="match_parent"
@@ -13,10 +13,11 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
+        android:gravity="center_horizontal"
         android:hint="@string/artist" />
     
     <EditText
-        style="@style/Orange"
+        style="@style/StoneEdit"
         android:id="@+id/title"
         android:inputType="text"
         android:layout_width="match_parent"
@@ -25,7 +26,15 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
+        android:gravity="center_horizontal"
         android:fontFamily="sans-serif"
         android:hint="@string/title"/>
+
+    <Button
+        style="@style/StoneButton"
+        android:id="@+id/applyButton"
+        android:text="Apply"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     
 </LinearLayout>
