--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,9 +19,14 @@
     </style>
     
     
-     <style name="Orange" parent="android:Widget.EditText">
+     <style name="StoneEdit" parent="android:Widget.EditText">
 	  <item name="android:background">@drawable/songstone_edit_text_holo_light</item>
 	  <item name="android:textColor">#000000</item>
   	</style>
+
+    <style name="StoneButton" parent="android:Widget.Button">
+        <item name="android:background">@drawable/songstone_btn_default_holo_light</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 
 </resources>
