--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -13,4 +13,11 @@
         android:showAsAction="never"
         android:title="@string/action_refresh"/>
 
+    <item
+        android:id="@+id/action_bluetooth"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:title="Bluetooth"
+        android:icon="@drawable/bluetooth"/>
+
 </menu>
