--- a/res/layout/notification.xml
+++ b/res/layout/notification.xml
@@ -14,6 +14,7 @@
     <TextView
         android:id="@+id/title"
         android:textSize="10pt"
+        android:text="Title"
         android:gravity="center"
         android:layout_width="0dp"
         android:layout_weight="10"
