--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -29,4 +29,9 @@
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
+    <style name="StoneNotificationButton" parent="android:Widget.Button">
+        <item name="android:background">@drawable/btn_default_notification</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 </resources>
