--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,25 @@
 
         <!-- **** Place Your Content Here **** -->
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/songsview"
-                android:scrollbars="vertical"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="7"/>
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/songsview"
+                    android:scrollbars="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="7"/>
+
+                <TextView
+                    android:id="@+id/emptyView"
+                    android:layout_width="match_parent"
+                    android:gravity="center"
+                    android:text="Any Songs Found"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
 
 
         <View
