--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,8 @@
                     android:layout_width="match_parent"
                     android:gravity="center"
                     android:text="Any Songs Found"
+                    android:textSize="30sp"
+                    android:textColor="@color/gray"
                     android:layout_height="match_parent" />
 
             </LinearLayout>
