--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,23 +3,21 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:colorPrimaryDark">#ffe47b00</item>
-        <item name="android:colorPrimary">#FF9400</item>
+        <item name="android:colorPrimaryDark">@color/black</item>
+        <item name="android:navigationBarColor">@color/black</item>
+
     </style>
 
     <style name="SampleTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">#000</item>
         <item name="colorAccent">@color/flush_orange</item>
-
         <item name="alertDialogTheme">@style/SampleAlertDialogTheme</item>
 
         <!-- These are important. Handled by toolbar -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
-
 
     <style name="SampleAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorPrimary">@color/black</item>
