--- a/app/src/main/res/layout/fragment_panel.xml
+++ b/app/src/main/res/layout/fragment_panel.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="61dp" tools:context="bartoshr.songstone.PanelFragment"
+    android:layout_height="61dp" tools:context="bartoshr.songstone.fragments.PanelFragment"
     android:clickable="true"
     android:orientation="vertical"
     android:layout_gravity="bottom">
