--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-
+        <item name="android:windowBackground">@drawable/white_bg</item>
     </style>
 
     <style name="SampleTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
