--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="flush_orange">#FF7E00</color>
-    <color name="pizzaz">#FF9400</color>
-    <color name="yellow_sea">#FFAC03</color>
+    <!-- View colors -->
 
-    <color name="walter_white">#fff</color>
-    <color name="white">#fff3f3f3</color>
-    
-    <color name="black">#222222</color>
-    <color name="gray">#ff5b5b5b</color>
+    <color name="emptyView">#FF5B5B5B</color>
+    <color name="panelView">#FF5B5B5B</color>
+
+    <!-- Theme colors -->
 
     <color name="colorPrimary">#222222</color>
     <color name="colorPrimaryDark">#222222</color>
-    <color name="navigationBarColor">#222222</color>
+    <color name="colorAccent">#FF7E00</color>
 
-    <color name="windowBackground">#</color>
+    <color name="textColorPrimary">#FFF</color>
+
+    <color name="navigationBarColor">#222222</color>
+    <color name="windowBackground">#FFF3F3F3</color>
 
 
 
