--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@drawable/white_bg</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
     <style name="FilePickerTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/flush_orange</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
         <item name="alertDialogTheme">@style/FilePickerTheme.Dialog</item>
 
@@ -19,9 +19,9 @@
     </style>
 
     <style name="FilePickerTheme.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">#000</item>
-        <item name="colorAccent">@color/flush_orange</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
 </resources>
