--- a/app/src/main/res/layout/fragment_panel.xml
+++ b/app/src/main/res/layout/fragment_panel.xml
@@ -1,6 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="61dp" tools:context="bartoshr.songstone.PanelFragment"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="61dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="bartoshr.songstone.PanelFragment"
     android:clickable="true"
     android:orientation="vertical"
     android:layout_gravity="bottom">
@@ -9,6 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:background="@drawable/panel_dropshadow" />
+
+    <com.balysv.materialripple.MaterialRippleLayout
+        android:id="@+id/ripple"
+        app:mrl_rippleOverlay="true"
+        app:mrl_rippleColor="#ff0000"
+        app:mrl_rippleAlpha="0.2"
+        app:mrl_rippleHover="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/panelView"
@@ -19,5 +31,7 @@
         android:gravity="center_vertical"
         android:textSize="18sp"
         android:paddingLeft="10dp"/>
+
+    </com.balysv.materialripple.MaterialRippleLayout>
 
 </LinearLayout>
