--- a/app/src/main/res/layout/fragment_panel.xml
+++ b/app/src/main/res/layout/fragment_panel.xml
@@ -16,7 +16,7 @@
     <com.balysv.materialripple.MaterialRippleLayout
         android:id="@+id/ripple"
         app:mrl_rippleOverlay="true"
-        app:mrl_rippleColor="#ff0000"
+        app:mrl_rippleColor="#FFF"
         app:mrl_rippleAlpha="0.2"
         app:mrl_rippleHover="true"
         android:layout_width="match_parent"
