--- a/app/src/main/res/layout/fragment_panel.xml
+++ b/app/src/main/res/layout/fragment_panel.xml
@@ -26,7 +26,8 @@
         android:id="@+id/panelView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/panelView"
+        android:background="@color/panelBackground"
+        android:textColor="@color/panelText"
         android:text="@string/default_fragment_panel"
         android:gravity="center_vertical"
         android:textSize="18sp"
