--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,77 @@
-
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/nav_drawer"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+
+    <include android:id="@+id/toolbar"
+        layout="@layout/toolbar"></include>
+
+
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/nav_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
     <!-- your content layout -->
 
 
-<LinearLayout
-    android:id="@+id/parentView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+        <LinearLayout
+            android:id="@+id/parentView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".MainActivity">
 
-    <include android:id="@+id/toolbar"
-        layout="@layout/toolbar"></include>
-
-    <FrameLayout
-        android:id="@+id/screenLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!-- **** Place Your Content Here **** -->
-
-            <LinearLayout
+            <FrameLayout
+                android:id="@+id/screenLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/songsview"
-                    android:scrollbars="vertical"
+                <!-- **** Place Your Content Here **** -->
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/songsview"
+                            android:scrollbars="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="7"/>
+
+                        <TextView
+                            android:id="@+id/emptyView"
+                            android:layout_width="match_parent"
+                            android:gravity="center"
+                            android:text="Any Songs Found"
+                            android:textSize="30sp"
+                            android:textColor="@color/emptyView"
+                            android:layout_height="match_parent" />
+
+                    </LinearLayout>
+
+
+                <View
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="7"/>
-
-                <TextView
-                    android:id="@+id/emptyView"
-                    android:layout_width="match_parent"
-                    android:gravity="center"
-                    android:text="Any Songs Found"
-                    android:textSize="30sp"
-                    android:textColor="@color/emptyView"
-                    android:layout_height="match_parent" />
-
-            </LinearLayout>
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/toolbar_dropshadow" />
-    </FrameLayout>
+                    android:layout_height="5dp"
+                    android:background="@drawable/toolbar_dropshadow" />
+            </FrameLayout>
 
 
 
-</LinearLayout>
+        </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/drawer_header"
         app:menu="@menu/drawer" />
-</android.support.v4.widget.DrawerLayout>
+    </android.support.v4.widget.DrawerLayout>
+
+</LinearLayout>
