--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,30 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme" parent="AppTheme.Base">
+        <!-- Style for reuse in v21 -->
+
+    </style>
+
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/windowBackground</item>
 
     </style>
+
+    <style name="AppTheme.Toolbar" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">@color/textColorToolbar</item>
+        <item name="android:textColorSecondary">@color/textColorToolbar</item>
+        <item name="android:actionMenuTextColor">@color/textColorToolbarMenu</item>
+    </style>
+
+
+
+    <!-- Theme for File Picker -->
 
     <style name="FilePickerTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
         <item name="colorPrimary">@color/colorPrimary</item>
