--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -4,11 +4,11 @@
         <item
             android:id="@+id/navigation_item_stats"
             android:checked="true"
-            android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
+            android:icon="@drawable/ic_action_stats"
             android:title="@string/navigation_item_stats" />
         <item
             android:id="@+id/navigation_item_sets"
-            android:icon="@drawable/ic_collections_add_collection"
+            android:icon="@drawable/ic_action_sets"
             android:title="@string/navigation_item_sets" />
     </group>
 
