--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -10,6 +10,10 @@
             android:id="@+id/navigation_item_sets"
             android:icon="@drawable/ic_action_sets"
             android:title="@string/navigation_item_sets" />
+        <item
+            android:id="@+id/navigation_item_show_path"
+            android:icon="@drawable/ic_action_change_path"
+            android:title="@string/navigation_item_change_path" />
     </group>
 
 
