--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -65,20 +66,44 @@
         </LinearLayout>
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:onClick="doNothing"
             android:layout_gravity="start"
             android:background="@color/windowBackground">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/optionsView"
-                android:scrollbars="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="7"/>
 
-        </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_alignParentTop="true"
+                android:id="@+id/optionsView"
+                android:overScrollMode="never"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"/>
+
+            <View
+                android:layout_below="@id/optionsView"
+                android:id="@+id/separator"
+                android:layout_marginLeft="?android:attr/listPreferredItemPaddingLeft"
+                android:layout_marginRight="?android:attr/listPreferredItemPaddingRight"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/bookmarksView"
+                android:layout_below="@id/separator"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+
+
+
+        </RelativeLayout>
 
 
     </android.support.v4.widget.DrawerLayout>
