--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,13 +35,9 @@
                 <!-- **** Place Your Content Here **** -->
 
                     <LinearLayout
+                        android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-
-                        <android.support.v4.widget.SwipeRefreshLayout
-                            android:id="@+id/swipeRefreshLayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
 
                             <android.support.v7.widget.RecyclerView
                                 android:id="@+id/songsview"
@@ -49,8 +45,6 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_weight="7"/>
-
-                        </android.support.v4.widget.SwipeRefreshLayout>
 
                         <TextView
                             android:id="@+id/emptyView"
