--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -25,7 +25,7 @@
             android:textSize="16dp"
             android:text="Old Man Canyon - Phantom&amp;Friends"
             android:gravity="center_vertical"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/black" />
 
     </RelativeLayout>
 
