--- a/app/src/main/res/values-v22/styles.xml
+++ b/app/src/main/res/values-v22/styles.xml
@@ -8,6 +8,7 @@
 
         <!-- Standards setts. -->
         <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:windowBackground">@color/windowBackground</item>
 
 
